--- a/Source/HQF.Tutorial.WebAPI.Indentity2/packages.config
+++ b/Source/HQF.Tutorial.WebAPI.Indentity2/packages.config
@@ -5,7 +5,7 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net451" />
@@ -16,6 +16,8 @@
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Sendgrid" version="6.3.4" targetFramework="net451" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net451" />
 </packages>
