--- a/Source/HQF.Tutorial.WebAPI.Indentity2/HQF.Tutorial.WebAPI.Indentity2.csproj
+++ b/Source/HQF.Tutorial.WebAPI.Indentity2/HQF.Tutorial.WebAPI.Indentity2.csproj
@@ -174,6 +174,8 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
+    <Compile Include="Infrastructure\ApplicationRoleManager.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Infrastructure\ApplicationUser.cs" />
     <Compile Include="Infrastructure\ApplicationDbContext.cs" />
@@ -183,6 +185,7 @@
       <DependentUpon>201603040133460_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\RoleBindingModels.cs" />
     <Compile Include="Models\ModelFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CustomJwtFormat.cs" />
